<resources>
    <string name="app_name">VendorApp</string>
    <string name="et_enter_email">Enter Email</string>
    <string name="et_enter_password">Enter password</string>
    <string name="btn_login">Login</string>
    <string name="don_t_have_a_account_create_one">Don\'t have a Account? Create one!</string>
    <string name="btn_sign_up">Create Account</string>
    <string name="tv_address">Address</string>
    <string name="et_hint_password">Password</string>
    <string name="enter_phone_number">Enter phone</string>
    <string name="et_hint_email">Enter email</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="new_user">New user</string>
    <string name="error_enter_email_id">Enter valid email</string>
    <string name="error_enter_password">Enter valid password</string>
    <string name="title_activity_home">Vendor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add">Add</string>
    <string name="title_chat">Chat</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_valid_phone">Enter valid phone</string>
    <string name="enter_valid_password">Password too weak</string>
    <string name="password_pattern">((?=.*\\\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%]).{6,20})</string>
    <string name="password_match_error">Paswword does not match</string>
    <string name="no_network_toast">Please turn on network</string>
    <string name="network_state_on">Network Avalable</string>
    <string name="network_state_off">Network UnAvailable</string>
    <string name="enter_valid_address">Enter valid address</string>
    <string name="firebase_path">users</string>
    <string name="transport_id">testname</string>
    <string name="permission_denied_explanation">Permission denied please allow</string>
    <string name="settings">Settings</string>
    <string name="permission_rationale">Please enable permissions to access data</string>
    <string name="about_us_content">     This application is developed farmers and buyers without <b>middle man</b> contact.\n        By using this application users can easily interact with buyers and sell their products in higher cost.</string>
    <string name="btn_update">Update</string>
    <string name="permission_camera_denied">Permission denied</string>
    <string name="permission_camera_rationale">Allow permissions</string>
    <string name="snack_bar_title">Allow permissions to access data!</string>
    <string name="snack_bar_btn">Open settings</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="edit">edit</string>
    <string name="home_tab">home</string>
    <string name="add_product_tab">addProduct</string>
    <string name="chat_tab">Chat</string>
    <string name="cart_tab">cart</string>
    <string name="profile_tab">profile</string>
    <string name="input_error">Invalid credentials!</string>
    <string name="account_creation_success">Account created Successfully!</string>
    <string name="auth_fail">Email already in use.. Please use different one or contact administrator.</string>
    <string name="add_product_title">Add Product</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_product">Add Product</string>
    <string name="edit_profile">Edit profile</string>
    <string name="from">From  </string>
    <string name="feedback">Leave a FeedBack</string>
    <string name="invite">Invite a friend</string>
    <string name="app_language">App language</string>
    <string name="delete">Delete my account</string>
</resources>
