<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/home_add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/home_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/home_sold"
        android:title="@string/cart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/home_profile"
        android:title="@string/profile" />

</menu>
